--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,4 +52,10 @@ dependencies {
     implementation 'com.borjabravo:readmoretextview:2.1.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+
+    testImplementation 'junit:junit:4.12'
+    testImplementation 'androidx.test:core:1.2.0'
+    testImplementation 'org.mockito:mockito-core:2.22.0'
+    testImplementation 'org.robolectric:robolectric:4.1'
+    testImplementation 'com.squareup.okhttp3:mockwebserver:4.5.0'
 }
